Fix issue with gallery icons hover colors being invisible

--- a/src/styles/Gallery.scss
+++ b/src/styles/Gallery.scss
@@ -98,7 +98,7 @@
         cursor: pointer;
         z-index: 4;
         &:hover, &:focus, &:active {
-            color: $color-1;
+            color: $color-2;
         }
         svg {
             transition: 0.2s;
